basic graph functionality working